# genau_project

./: .breakpoints  LICENSE  README.md  app.py  database.py  pyproject.toml
templates/: home.html  wort.html
