[tool.poetry]
name = "repl-nix-genauproject"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_genauproject"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
